k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-project-client
  namespace: devops-project
spec:
  type: ClusterIP
  selector:
    app: devops-project-client
  ports:
    - name: http
      port: 80
      targetPort: 80
