k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-project-server
  namespace: devops-project
spec:
  type: ClusterIP
  selector:
    app: devops-project-server
  ports:
    - name: http
      port: 8080
      targetPort: 8080
